--- a/.github/renovate/packageRules.json5
+++ b/.github/renovate/packageRules.json5
@@ -5,13 +5,7 @@
       "description": ["Loose versioning for non-semver packages"],
       "matchDatasources": ["docker"],
       "versioning": "loose",
-      "matchPackagePatterns": ["changedetection", "plex", "qbittorrent", "mylar3"]
-    },
-    {
-      "description": ["Custom versioning for minio"],
-      "matchDatasources": ["docker"],
-      "versioning": "regex:^RELEASE\\.(?<major>\\d+)-(?<minor>\\d+)-(?<patch>\\d+)T.*Z$",
-      "matchPackagePatterns": ["minio"]
+      "matchPackagePatterns": ["changedetection", "plex", "mylar3"]
     },
     {
       "description": ["Custom versioning for mylar3"],
