--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -4,33 +4,26 @@
     ":skipStatusChecks",
     "github>joryirving/renovate-config",
     "github>joryirving/renovate-config:autoMerge",
-    "github>joryirving/home-ops//.github/renovate/allowedVersions.json5",
-    "github>joryirving/home-ops//.github/renovate/autoMerge.json5",
     "github>joryirving/home-ops//.github/renovate/customManagers.json5",
     "github>joryirving/home-ops//.github/renovate/grafanaDashboards.json5",
     "github>joryirving/home-ops//.github/renovate/groups.json5",
     "github>joryirving/home-ops//.github/renovate/packageRules.json5"
   ],
-  "ignorePaths": [
-    "**/*.sops.*",
-    "**/.archive/**",
-    "**/resources/**"
-  ],
+  "ignorePaths": ["**/*.sops.*", "**/.archive/**", "**/resources/**"],
   "flux": {
     "fileMatch": [
-      "(^|/)kubernetes/.+\\.ya?ml(?:\\.j2)?$"
+      "(^|/)kubernetes/.+\\.ya?ml$"
     ]
   },
   "helm-values": {
     "fileMatch": [
-      "(^|/)kubernetes/.+\\.ya?ml(?:\\.j2)?$"
+      "(^|/)kubernetes/.+\\.ya?ml$"
     ]
   },
   "kubernetes": {
     "fileMatch": [
-      "(^|/)\\.taskfiles/.+\\.ya?ml(?:\\.j2)?$",
-      "(^|/)ansible/.+\\.ya?ml(?:\\.j2)?$",
-      "(^|/)kubernetes/.+\\.ya?ml(?:\\.j2)?$"
+      "(^|/)\\.taskfiles/.+\\.ya?ml$",
+      "(^|/)kubernetes/.+\\.ya?ml$"
     ]
   }
 }
