--- a/.github/renovate/packageRules.json5
+++ b/.github/renovate/packageRules.json5
@@ -5,7 +5,7 @@
       "description": ["Loose versioning for non-semver packages"],
       "matchDatasources": ["docker"],
       "versioning": "loose",
-      "matchPackagePatterns": ["changedetection", "plex", "mylar3"]
+      "matchPackagePatterns": ["plex", "mylar3"]
     },
     {
       "description": ["Custom versioning for mylar3"],
