--- a/kubernetes/main/apps/games/minecraft/takocraft/helmrelease.yaml
+++ b/kubernetes/main/apps/games/minecraft/takocraft/helmrelease.yaml
@@ -39,8 +39,8 @@ spec:
       limits:
         memory: 8Gi
     securityContext:
-      runAsUser: &uid 568
-      fsGroup: *uid
+      runAsUser: 1000
+      fsGroup: 100
     livenessProbe:
       enabled: false
       command:
