--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -3,7 +3,8 @@
   "extends": [
     ":skipStatusChecks",
     "github>joryirving/renovate-config",
-    "github>joryirving/renovate-config:autoMerge",
+    "github>joryirving/renovate-config:autoMergeDocker",
+    "github>joryirving/renovate-config:autoMergeGithubActions",
     "github>joryirving/home-ops//.github/renovate/customManagers.json5",
     "github>joryirving/home-ops//.github/renovate/grafanaDashboards.json5",
     "github>joryirving/home-ops//.github/renovate/groups.json5",
