--- a/kubernetes/main/apps/database/crunchy-postgres/cluster/kustomization.yaml
+++ b/kubernetes/main/apps/database/crunchy-postgres/cluster/kustomization.yaml
@@ -6,5 +6,5 @@ resources:
   - ./cluster.yaml
   - ./externalsecret.yaml
   - ./gatus.yaml
-  # - ./nfs-pvc.yaml
+  - ./nfs-pvc.yaml
   - ./podmonitor.yaml
