--- a/kubernetes/main/apps/database/crunchy-postgres/cluster/nfs-pvc.yaml
+++ b/kubernetes/main/apps/database/crunchy-postgres/cluster/nfs-pvc.yaml
@@ -7,6 +7,7 @@ spec:
   capacity:
     storage: 1Mi
   accessModes: ["ReadWriteMany"]
+  storageClassName: nfs-slow #csi-driver-nfs
   nfs:
     server: voyager.internal
     path: ${SECRET_NFS_POSTGRES:=temp}
