feat: update volsync

--- a/kubernetes/main/apps/downloads/qbittorrent/ks.yaml
+++ b/kubernetes/main/apps/downloads/qbittorrent/ks.yaml
@@ -24,7 +24,7 @@ spec:
     substitute:
       APP: *app
       VOLSYNC_ACCESSMODES: ReadWriteMany
-      VOLSYNC_SNAP_ACCESSMODES: ReadOnlyMany
+      VOLSYNC_SNAP_ACCESSMODES: ReadWriteMany #ReadOnlyMany
       PVC_VOLSYNC_STORAGECLASS: ceph-filesystem
       VOLSYNC_STORAGECLASS: ceph-filesystem
       VOLSYNC_SNAPSHOTCLASS: csi-ceph-filesystem
