fix: update talos schematic id for utility

--- a/kubernetes/main/apps/kube-tools/system-upgrade-controller/plans/talos.yaml
+++ b/kubernetes/main/apps/kube-tools/system-upgrade-controller/plans/talos.yaml
@@ -43,6 +43,6 @@ spec:
     args:
       - --nodes=$(NODE_IP)
       - upgrade
-      - --image=factory.talos.dev/installer/97bf8e92fc6bba0f03928b859c08295d7615737b29db06a97be51dc63004e403:$(SYSTEM_UPGRADE_PLAN_LATEST_VERSION)
+      - --image=factory.talos.dev/installer/$(TALOS_SCHEMATIC_ID):$(SYSTEM_UPGRADE_PLAN_LATEST_VERSION)
       - --preserve=true
       - --wait=false
