--- a/kubernetes/main/apps/kube-system/cilium/app/helm-values.yaml
+++ b/kubernetes/main/apps/kube-system/cilium/app/helm-values.yaml
@@ -4,6 +4,7 @@ bandwidthManager:
   enabled: false
   bbr: true
 bpf:
+  datapathMode: netkit
   hostLegacyRouting: true
   masquerade: true
   tproxy: true
@@ -12,8 +13,10 @@ cgroup:
     enabled: false
   hostRoot: /sys/fs/cgroup
 cluster:
-  name: main
   id: 1
+  name: main
+cni:
+  exclusive: false
 devices: enp+
 enableRuntimeDeviceDetection: true
 endpointRoutes:
