feat: netkit on utility

--- a/kubernetes/utility/apps/kube-system/cilium/app/helm-values.yaml
+++ b/kubernetes/utility/apps/kube-system/cilium/app/helm-values.yaml
@@ -4,7 +4,7 @@ bandwidthManager:
   enabled: false
   bbr: true
 bpf:
-  # datapathMode: netkit
+  datapathMode: netkit
   hostLegacyRouting: true
   masquerade: true
   tproxy: true
@@ -13,12 +13,11 @@ cgroup:
     enabled: false
   hostRoot: /sys/fs/cgroup
 cluster:
-  name: utility
   id: 1
-# cni:
-  # exclusive: false
+  name: utility
+cni:
+  exclusive: false
 devices: enp+
-# enableIPv4BIGTCP: true
 enableRuntimeDeviceDetection: true
 endpointRoutes:
   enabled: true
@@ -36,7 +35,6 @@ kubeProxyReplacementHealthzBindAddr: 0.0.0.0:10256
 l2announcements:
   enabled: true
 loadBalancer:
-  # acceleration: best-effort
   algorithm: maglev
   mode: dsr
 localRedirectPolicy: true
