--- a/kubernetes/utility/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
@@ -41,9 +41,11 @@ spec:
         hosts:
           - alertmanager-utility.${SECRET_DOMAIN}
       alertmanagerSpec:
-        replicas: 1
-        useExistingSecret: true
-        configSecret: alertmanager-secret
+        alertmanagerConfiguration:
+          name: alertmanager
+          global:
+            resolveTimeout: 5m
+        externalUrl: https://lertmanager-utility.${SECRET_DOMAIN}
         storage:
           volumeClaimTemplate:
             spec:
