chore(talos): document kernel args

--- a/kubernetes/main/talos/talconfig.yaml
+++ b/kubernetes/main/talos/talconfig.yaml
@@ -245,8 +245,11 @@ patches:
     machine:
       install:
         extraKernelArgs:
-          - init_on_alloc=0
-          - init_on_free=0
+          - apparmor=0           # Less security, faster puter
+          - init_on_alloc=0      # Less security, faster puter
+          - init_on_free=0       # Less security, faster puter
+          - mitigations=off      # Less security, faster puter
+          - security=none        # Less security, faster puter
 
 controlPlane:
   nodeLabels:
