--- a/kubernetes/utility/talos/talconfig.yaml
+++ b/kubernetes/utility/talos/talconfig.yaml
@@ -150,11 +150,11 @@ patches:
     machine:
       install:
         extraKernelArgs:
-          - apparmor=0
-          - init_on_alloc=0
-          - init_on_free=0
-          - mitigations=off
-          - security=none
+          - apparmor=0           # Less security, faster puter
+          - init_on_alloc=0      # Less security, faster puter
+          - init_on_free=0       # Less security, faster puter
+          - mitigations=off      # Less security, faster puter
+          - security=none        # Less security, faster puter
 
 controlPlane:
   nodeLabels:
