feat: yoink tagger script

--- a/kubernetes/main/apps/downloads/sonarr/app/kustomization.yaml
+++ b/kubernetes/main/apps/downloads/sonarr/app/kustomization.yaml
@@ -10,7 +10,8 @@ resources:
 configMapGenerator:
   - name: sonarr-configmap
     files:
-      - refresh-series.sh=./resources/refresh-series.sh
+      - codec-tagger.sh=./resources/codec-tagger.sh
+      - tba-refresher.sh=./resources/tba-refresher.sh
 generatorOptions:
   disableNameSuffixHash: true
   annotations:
