--- a/kubernetes/main/apps/downloads/sonarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/sonarr/app/helmrelease.yaml
@@ -114,8 +114,11 @@ spec:
         name: sonarr-configmap
         defaultMode: 0775
         globalMounts:
-          - path: /scripts/refresh-series.sh
-            subPath: refresh-series.sh
+          - path: /scripts/codec-tagger.sh
+            subPath: codec-tagger.sh
+            readOnly: true
+          - path: /scripts/tba-refresher.sh
+            subPath: tba-refresher.sh
             readOnly: true
       tmp:
         type: emptyDir
