Bernd was right

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-# Trash
-.DS_Store
-Thumbs.db
-# k8s
+# Brew
+/.private/
+/.task/
+Brewfile.lock.json
+# Kubernetes
 kubeconfig
 talosconfig
 .decrypted~*
@@ -11,21 +12,17 @@ talosconfig
 *.pub
 *.key
 *.pem
+# Other
+*.psql
 # Private
 .private
 .bin
-# Ansible
-.venv/
-# Taskfile
-.task
-# Brew
-Brewfile.lock.json
 # Terraform
-.bitwarden
 .terraform
 .terraform.tfstate*
 .terraform.lock.hcl
 terraform.tfstate*
 *.tfvars
-# Other
-*.psql
+# Trash
+.DS_Store
+Thumbs.db
