--- a/.taskfiles/workstation/resources/Brewfile
+++ b/.taskfiles/workstation/resources/Brewfile
@@ -3,10 +3,8 @@ tap "go-task/tap"
 tap "siderolabs/tap"
 brew "age"
 brew "cloudflared"
-brew "direnv"
 brew "fluxcd/tap/flux"
 brew "gh"
-brew "go"
 brew "go-task/tap/go-task"
 brew "helm"
 brew "helmfile"
@@ -18,13 +16,13 @@ brew "kubeconform"
 brew "kubernetes-cli"
 brew "kustomize"
 brew "minijinja-cli"
+brew "mise"
 brew "moreutils"
-brew "python3"
 brew "siderolabs/tap/talosctl"
 brew "sops"
 brew "stern"
 brew "talhelper"
 brew "viddy"
 brew "yq"
-cask "bitwarden"
-## TODO: add Bitwarden Secret Manager CLI (bws) when it's available
+cask "1password"
+cask "1password-cli"
