feat: remove defaults

--- a/kubernetes/utility/talos/talconfig.yaml
+++ b/kubernetes/utility/talos/talconfig.yaml
@@ -64,14 +64,14 @@ patches:
         disableSearchDomain: true
 
   # Enable cluster discovery
-  - |-
-    cluster:
-      discovery:
-        registries:
-          kubernetes:
-            disabled: true
-          service:
-            disabled: false
+  # - |-
+  #   cluster:
+  #     discovery:
+  #       registries:
+  #         kubernetes:
+  #           disabled: true
+  #         service:
+  #           disabled: false
 
   # Configure kubelet
   - |-
