--- a/kubernetes/main/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/main/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
@@ -3,10 +3,9 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app kube-prometheus-stack
+  name: kube-prometheus-stack
 spec:
   interval: 30m
-  timeout: 15m
   chart:
     spec:
       chart: kube-prometheus-stack
@@ -38,8 +37,7 @@ spec:
         enabled: true
         pathType: Prefix
         ingressClassName: internal
-        hosts:
-          - alertmanager.${SECRET_DOMAIN}
+        hosts: ["alertmanager.${SECRET_DOMAIN}"]
       alertmanagerSpec:
         alertmanagerConfiguration:
           name: alertmanager
@@ -49,7 +47,7 @@ spec:
         storage:
           volumeClaimTemplate:
             spec:
-              storageClassName: ceph-filesystem
+              storageClassName: ceph-block
               resources:
                 requests:
                   storage: 1Gi
@@ -64,25 +62,21 @@ spec:
             etcd:
               enabled: true
     kubeApiServer:
-      enabled: true
-    kubelet:
-      enabled: true
-    kubeControllerManager:
-      enabled: true
-      endpoints: &cp
-        - 10.69.1.21
-        - 10.69.1.22
-        - 10.69.1.23
-    kubeEtcd:
-      enabled: true
-      endpoints: *cp
+      serviceMonitor:
+        selector:
+          k8s-app: kube-apiserver
     kubeScheduler:
-      enabled: true
-      endpoints: *cp
+      service:
+        selector:
+          k8s-app: kube-scheduler
+    kubeControllerManager: &kubeControllerManager
+      service:
+        selector:
+          k8s-app: kube-controller-manager
+    kubeEtcd:
+      <<: *kubeControllerManager # etcd runs on control plane nodes
     kubeProxy:
       enabled: false
-    kubeStateMetrics:
-      enabled: true
     kube-state-metrics:
       fullnameOverride: kube-state-metrics
       metricLabelsAllowlist:
@@ -98,8 +92,6 @@ spec:
               replacement: $1
               sourceLabels: ["__meta_kubernetes_pod_node_name"]
               targetLabel: kubernetes_node
-    nodeExporter:
-      enabled: true
     prometheus-node-exporter:
       fullnameOverride: node-exporter
       prometheus:
@@ -111,6 +103,37 @@ spec:
               replacement: $1
               sourceLabels: ["__meta_kubernetes_pod_node_name"]
               targetLabel: kubernetes_node
+    additionalPrometheusRulesMap:
+      dockerhub-rules:
+        groups:
+          - name: dockerhub
+            rules:
+              - alert: DockerhubRateLimitRisk
+                annotations:
+                  summary: Kubernetes cluster Dockerhub rate limit risk
+                expr: count(time() - container_last_seen{image=~"(docker.io).*",container!=""} < 30) > 100
+                labels:
+                  severity: critical
+      oom-rules:
+        groups:
+          - name: oom
+            rules:
+              - alert: OomKilled
+                annotations:
+                  summary: Container {{ $labels.container }} in pod {{ $labels.namespace }}/{{ $labels.pod }} has been OOMKilled {{ $value }} times in the last 10 minutes.
+                expr: (kube_pod_container_status_restarts_total - kube_pod_container_status_restarts_total offset 10m >= 1) and ignoring (reason) min_over_time(kube_pod_container_status_last_terminated_reason{reason="OOMKilled"}[10m]) == 1
+                labels:
+                  severity: critical
+      zfs-rules:
+        groups:
+          - name: zfs
+            rules:
+              - alert: ZfsUnexpectedPoolState
+                annotations:
+                  summary: ZFS pool {{$labels.zpool}} on {{$labels.instance}} is in a unexpected state {{$labels.state}}
+                expr: node_zfs_zpool_state{state!="online"} > 0
+                labels:
+                  severity: critical
     prometheus:
       ingress:
         enabled: true
@@ -125,10 +148,10 @@ spec:
           gethomepage.dev/widget.type: prometheus
           gethomepage.dev/widget.url: http://kube-prometheus-stack-prometheus.observability:9090
         pathType: Prefix
-        hosts:
-          - prometheus.${SECRET_DOMAIN}
+        hosts: ["prometheus.${SECRET_DOMAIN}"]
       prometheusSpec:
         enableAdminAPI: true
+        walCompression: true
         enableFeatures:
           - memory-snapshot-on-shutdown
         externalLabels:
@@ -138,7 +161,6 @@ spec:
             cpu: 100m
           limits:
             memory: 2500Mi
-        replicaExternalLabelName: __replica__
         ruleSelectorNilUsesHelmValues: false
         serviceMonitorSelectorNilUsesHelmValues: false
         podMonitorSelectorNilUsesHelmValues: false
@@ -146,7 +168,6 @@ spec:
         scrapeConfigSelectorNilUsesHelmValues: false
         retention: 30d
         retentionSize: 70GB
-        replicas: 1
         storageSpec:
           volumeClaimTemplate:
             spec:
