--- a/kubernetes/main/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/main/apps/kube-system/cilium/app/helmrelease.yaml
@@ -31,16 +31,16 @@ spec:
     hubble:
       enabled: true
       metrics:
-        # enabled:
-        #   - dns:query
-        #   - drop
-        #   - tcp
-        #   - flow
-        #   - port-distribution
-        #   - icmp
-        #   - http
+        enabled:
+          - dns:query
+          - drop
+          - tcp
+          - flow
+          - port-distribution
+          - icmp
+          - http
         serviceMonitor:
-          enabled: false
+          enabled: true
         dashboards:
           enabled: true
           annotations:
