feat(overseerr): migrate to jellyseerr

--- a/kubernetes/main/apps/database/crunchy-postgres/cluster/cluster.yaml
+++ b/kubernetes/main/apps/database/crunchy-postgres/cluster/cluster.yaml
@@ -70,6 +70,10 @@ spec:
       databases: ["dashbrr"]
       password:
         type: AlphaNumeric
+    - name: "jellyseerr"
+      databases: ["jellyseerr"]
+      password:
+        type: AlphaNumeric
     - name: "lubelog"
       databases: ["lubelog"]
       password:
