--- a/kubernetes/main/apps/downloads/dashbrr/app/externalsecret.yaml
+++ b/kubernetes/main/apps/downloads/dashbrr/app/externalsecret.yaml
@@ -14,7 +14,7 @@ spec:
         DASHBRR_RADARR_API_KEY: "{{ .RADARR_API_KEY }}"
         DASHBRR_SONARR_API_KEY: "{{ .SONARR_API_KEY }}"
         DASHBRR_PROWLARR_API_KEY: "{{ .PROWLARR_API_KEY }}"
-        DASHBRR_OVERSEERR_API_KEY: "{{ .OVERSEERR_API_KEY }}"
+        DASHBRR_JELLYSEERR_API_KEY: "{{ .JELLYSEERR_API_KEY }}"
         DASHBRR_MAINTAINERR_API_KEY: "{{ .MAINTAINERR_API_KEY }}"
         DASHBRR_PLEX_API_KEY: "{{ .PLEX_API_KEY }}"
         # OIDC
@@ -43,7 +43,7 @@ spec:
       key: prowlarr
     sourceRef: *onepass
   - extract:
-      key: overseerr
+      key: jellyseerr
     sourceRef: *onepass
   - extract:
       key: maintainerr
