--- a/kubernetes/main/apps/media/kustomization.yaml
+++ b/kubernetes/main/apps/media/kustomization.yaml
@@ -7,11 +7,11 @@ resources:
   - ./namespace.yaml
   # Flux-Kustomizations
   - ./ersatztv/ks.yaml
+  - ./jellyseerr/ks.yaml
   - ./kavita/ks.yaml
   - ./komga/ks.yaml
   # - ./kyoo/ks.yaml
   - ./maintainerr/ks.yaml
-  - ./overseerr/ks.yaml
   - ./plex/ks.yaml
   - ./tautulli/ks.yaml
   - ./wizarr/ks.yaml
