--- a/kubernetes/main/apps/media/wizarr/ks.yaml
+++ b/kubernetes/main/apps/media/wizarr/ks.yaml
@@ -12,7 +12,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: plex
-    - name: overseerr
+    - name: jellyseerr
     - name: volsync
   path: ./kubernetes/main/apps/media/wizarr/app
   prune: true
