--- a/kubernetes/main/apps/self-hosted/homepage/app/externalsecret.yaml
+++ b/kubernetes/main/apps/self-hosted/homepage/app/externalsecret.yaml
@@ -37,7 +37,7 @@ spec:
         HOMEPAGE_VAR_SABNZBD_TOKEN: "{{ .SABNZBD_API_KEY }}"
         HOMEPAGE_VAR_SONARR_TOKEN: "{{ .SONARR_API_KEY }}"
         ## Media
-        HOMEPAGE_VAR_OVERSEERR_TOKEN: "{{ .OVERSEERR_API_KEY }}"
+        HOMEPAGE_VAR_JELLYSEERR_TOKEN: "{{ .JELLYSEERR_API_KEY }}"
         HOMEPAGE_VAR_PLEX_TOKEN: "{{ .PLEX_API_KEY }}"
         HOMEPAGE_VAR_TAUTULLI_TOKEN: "{{ .TAUTULLI_API_KEY }}"
         HOMEPAGE_VAR_KAVITA_USERNAME: "{{ .KAVITA_USERNAME }}"
@@ -65,6 +65,8 @@ spec:
   - extract:
       key: home-assistant
   - extract:
+      key: jellyseerr
+  - extract:
       key: kapowarr
   - extract:
       key: kavita
@@ -74,8 +76,6 @@ spec:
       key: lubelog
   - extract:
       key: mylar
-  - extract:
-      key: overseerr
   - extract:
       key: paperless
   - extract:
