--- a/kubernetes/main/apps/media/jellyseerr/ks.yaml
+++ b/kubernetes/main/apps/media/jellyseerr/ks.yaml
@@ -3,7 +3,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app overseerr
+  name: &app jellyseerr
   namespace: flux-system
 spec:
   targetNamespace: media
@@ -12,7 +12,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: volsync
-  path: ./kubernetes/main/apps/media/overseerr/app
+  path: ./kubernetes/main/apps/media/jellyseerr/app
   prune: true
   sourceRef:
     kind: GitRepository
