--- a/kubernetes/utility/talos/talconfig.yaml
+++ b/kubernetes/utility/talos/talconfig.yaml
@@ -67,6 +67,7 @@ patches:
   - |-
     cluster:
       discovery:
+        enabled: true
         registries:
           kubernetes:
             disabled: false
@@ -89,15 +90,16 @@ patches:
   - |-
     machine:
       sysctls:
-        fs.inotify.max_user_watches: 1048576
-        fs.inotify.max_user_instances: 8192
-        net.core.netdev_max_backlog: 30000
-        net.core.rmem_max: 67108864
-        net.core.wmem_max: 67108864
-        net.ipv4.tcp_rmem: 4096 87380 33554432
-        net.ipv4.tcp_wmem: 4096 65536 33554432
-        net.ipv4.tcp_tw_reuse: 1
-        net.ipv4.tcp_window_scaling: 1
+        fs.inotify.max_user_watches: 1048576   # Watchdog
+        fs.inotify.max_user_instances: 8192    # Watchdog
+        net.core.default_qdisc: fq             # 2.5Gb/s
+        net.core.rmem_max: 67108864            # 2.5Gb/s | Cloudflared / QUIC
+        net.core.wmem_max: 67108864            # 2.5Gb/s | Cloudflared / QUIC
+        net.ipv4.tcp_congestion_control: bbr   # 2.5Gb/s
+        net.ipv4.tcp_fastopen: 3               # TCP Fast Open
+        net.ipv4.tcp_rmem: 4096 87380 33554432 # 2.5Gb/s
+        net.ipv4.tcp_wmem: 4096 65536 33554432 # 2.5Gb/s
+        net.ipv4.tcp_window_scaling: 1         # 2.5Gb/s
 
   # Custom sysfs settings
   - |-
