feat: add secret

--- a/kubernetes/main/apps/media/jellyseerr/app/externalsecret.yaml
+++ b/kubernetes/main/apps/media/jellyseerr/app/externalsecret.yaml
@@ -18,7 +18,7 @@ spec:
         DB_PORT: '{{ index . "pgbouncer-port" }}'
         DB_USER: '{{ .user }}'
         DB_PASS: '{{ .password }}'
-        =: '{{ .dbname }}'
+        DB_NAME: '{{ .dbname }}'
   dataFrom:
   - extract:
       key: jellyseerr
