--- a/kubernetes/main/apps/media/jellyseerr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/jellyseerr/app/helmrelease.yaml
@@ -37,6 +37,9 @@ spec:
               tag: 2.1.0@sha256:af5563771964282e5bfb6a4f30b05c75c8d30661a920f0399086f575217d0573
             env:
               TZ: ${TIMEZONE}
+            envFrom:
+              - secretRef:
+                  name: jellyseerr-secret
             resources:
               requests:
                 cpu: 10m
