feat: deploy abiotic

--- a/kubernetes/main/apps/games/kustomization.yaml
+++ b/kubernetes/main/apps/games/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
   # Flux-Kustomizations
+  - ./abiotic/ks.yaml
   # - ./core-keeper/ks.yaml
   - ./minecraft/ks.yaml
   # - ./palworld/ks.yaml
