feat: update GHA

--- a/.github/workflows/nas-restart.yaml
+++ b/.github/workflows/nas-restart.yaml
@@ -65,6 +65,13 @@
                 --no-headers | \
                 awk '{print "kubectl --context ${{ matrix.cluster }} rollout restart deployment/"$2" -n "$1}' | \
                 sh
+
+        - name: Restart Database Deployments
+          if: matrix.cluster == 'main'
+          env:
+            KUBECONFIG: ${{ steps.kubeconfig.outputs.filePath }}
+          shell: bash
+          run: |
             kubectl \
                 --context ${{ matrix.cluster }} \
                 rollout restart statefulset postgres-repo-host -n database
