feat: fix jellyseer secret

--- a/kubernetes/main/apps/media/jellyseerr/app/externalsecret.yaml
+++ b/kubernetes/main/apps/media/jellyseerr/app/externalsecret.yaml
@@ -11,7 +11,7 @@ spec:
       engineVersion: v2
       data:
         # App
-        JELLYSEERR_API_KEY: "{{ .JELLYSEERR_API_KEY }}"
+        API_KEY: "{{ .JELLYSEERR_API_KEY }}"
         # Database
         DB_TYPE: "postgres"
         DB_HOST: '{{ index . "pgbouncer-host" }}'
