--- a/.github/workflows/pre-pull-images.yaml
+++ b/.github/workflows/pre-pull-images.yaml
@@ -5,7 +5,10 @@ name: "Pre-pull Images"
 on:
   pull_request:
     branches: ["main"]
-    paths: ["kubernetes/**"]
+    paths:
+      - kubernetes/**/apps/**
+      - kubernetes/**/flux/**
+      - kubernetes/shared/**
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.number || github.ref }}
@@ -70,7 +73,7 @@ jobs:
       fail-fast: false
     outputs:
       images: ${{ steps.extract-images.outputs.images }}
-      paths: ${{ fromJSON(needs.changed-clusters.outputs.matrix) }}
+      paths: ${{ needs.changed-clusters.outputs.matrix }}
     steps:
       - name: Configure 1password
         uses: 1password/load-secrets-action/configure@v2
@@ -92,12 +95,12 @@ jobs:
           app-id: ${{ env.BOT_APP_ID }}
           private-key: ${{ env.BOT_APP_PRIVATE_KEY }}
 
-      - name: Setup mise
-        uses: jdx/mise-action@v2
-        with:
-          mise_toml: |
-            [tools]
-            "aqua:mikefarah/yq" = "latest"
+      - name: Setup Homebrew
+        uses: Homebrew/actions/setup-homebrew@master
+
+      - name: Setup Workflow Tools
+        shell: bash
+        run: brew install jo yq
 
       - name: Checkout Default Branch
         uses: actions/checkout@v4
@@ -182,17 +185,28 @@ jobs:
         with:
           export-env: true
         env:
-          TALOSCONFIG: op://Kubernetes/kubernetes/TALOSCONFIG_${{ env.cluster }}
+          TALOSCONFIG_BASE64: op://Kubernetes/kubernetes/TALOSCONFIG_${{ env.cluster }}_BASE64
 
-      - name: Setup mise
-        uses: jdx/mise-action@v2
+      - name: Write talosconfig
+        id: talosconfig
+        uses: timheuer/base64-to-file@v1
         with:
-          mise_toml: |
-            [tools]
-            "aqua:siderolabs/talos" = "latest"
+          encodedString: "${{ env.TALOSCONFIG_BASE64 }}"
+          fileName: talosconfig
+
+      - name: Setup Homebrew
+        uses: Homebrew/actions/setup-homebrew@master
+
+      - name: Setup Workflow Tools
+        shell: bash
+        run: brew install siderolabs/tap/talosctl
 
       - name: Pre-pull Image
-        run: talosctl -n $NODE_IP image pull ${{ matrix.images }}
+        env:
+          TALOSCONFIG: ${{ steps.talosconfig.outputs.filePath }}
+        run: |
+          NODE=$(talosctl config info --output json | jq --raw-output '.nodes[]' | shuf -n 1)
+          talosctl -n $NODE image pull ${{ matrix.images }}
 
   # Summarize matrix https://github.community/t/status-check-for-a-matrix-jobs/127354/7
   pre-pull-images-success:
