--- a/.github/workflows/schemas.yaml
+++ b/.github/workflows/schemas.yaml
@@ -30,7 +30,7 @@ jobs:
         env:
           BOT_APP_ID: op://Kubernetes/github-bot/BOT_APP_ID
           BOT_APP_PRIVATE_KEY: op://Kubernetes/github-bot/BOT_APP_PRIVATE_KEY
-          KUBECONFIG: op://Kubernetes/kubernetes/KUBECONFIG_BASE64
+          KUBECONFIG_BASE64: op://Kubernetes/kubernetes/KUBECONFIG_BASE64
           CLOUDFLARE_API_TOKEN: op://Kubernetes/cloudflare/CLOUDFLARE_API_TOKEN_GHA
           CLOUDFLARE_ACCOUNT_ID: op://Kubernetes/cloudflare/CLOUDFLARE_ACCOUNT_TAG
 
@@ -46,12 +46,12 @@ jobs:
         with:
           token: ${{ steps.app-token.outputs.token }}
 
-      - name: Setup mise
-        uses: jdx/mise-action@v2
-        with:
-          mise_toml: |
-            [tools]
-            "aqua:kubernetes/kubectl" = "latest"
+      - name: Setup Homebrew
+        uses: Homebrew/actions/setup-homebrew@master
+
+      - name: Setup Workflow Tools
+        shell: bash
+        run: brew install kubectl
 
       - name: Setup Python
         uses: actions/setup-python@v5
@@ -67,7 +67,7 @@ jobs:
         id: kubeconfig
         uses: timheuer/base64-to-file@v1
         with:
-          encodedString: ${{ env.KUBECONFIG }}
+          encodedString: "${{ env.KUBECONFIG_BASE64 }}"
           fileName: kubeconfig
 
       - name: Download and run crd-extractor
